fixed issue making index.html to not display well on firefox

--- a/scss/_complex-media.scss
+++ b/scss/_complex-media.scss
@@ -27,7 +27,7 @@
             border-bottom: 2px solid #0f0338;
             font-weight: 600; 
             letter-spacing: normal; 
-            width: fit-content;
+            width: max-content;
             // font-size: 35px;
         }
 
@@ -90,7 +90,7 @@
             border-bottom: 2px solid #0f0338;
             font-weight: 600; 
             letter-spacing: normal; 
-            width: fit-content;
+            width: max-content;
             // font-size: 35px;
         }
 
@@ -154,7 +154,7 @@
             border-bottom: 2px solid #0f0338;
             font-weight: 600; 
             letter-spacing: normal; 
-            width: fit-content;
+            width: max-content;
             // font-size: 35px;
         }
 
@@ -219,7 +219,7 @@
             border-bottom: 2px solid #0f0338;
             font-weight: 600; 
             letter-spacing: normal; 
-            width: fit-content;
+            width: max-content;
             font-size: 20px;
         }
 
@@ -282,7 +282,7 @@
             border-bottom: 2px solid #0f0338;
             font-weight: 600; 
             letter-spacing: normal; 
-            width: fit-content;
+            width: max-content;
             font-size: 20px;
         }
 
@@ -347,7 +347,7 @@
             border-bottom: 2px solid #0f0338;
             font-weight: 600; 
             letter-spacing: normal; 
-            width: fit-content;
+            width: max-content;
             font-size: 20px;
         }
 
@@ -411,7 +411,7 @@
             border-bottom: 2px solid #0f0338;
             font-weight: 600; 
             letter-spacing: normal; 
-            width: fit-content;
+            width: max-content;
             font-size: 20px;
         }
 
@@ -476,7 +476,7 @@
             border-bottom: 2px solid #0f0338;
             font-weight: 600; 
             letter-spacing: normal; 
-            width: fit-content;
+            width: max-content;
             font-size: 20px;
         }
 
