--- a/scss/general.scss
+++ b/scss/general.scss
@@ -30,7 +30,7 @@ button, a {
         border-bottom: 2px solid #0f0338;
         font-weight: 600; 
         letter-spacing: normal; 
-        width: fit-content;
+        width: max-content;
     }
 
     h2 {
